--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "@clerk/express": "^1.7.35",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.0"
+    "mongoose": "^8.19.0",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
