--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.0",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "ollama": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
